# IncrementalUpdates

./: .gitignore  IncrementalUpdates.jks  README.md
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/androidTest/java/com/ly/chen/incrementalupdates/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/ly/chen/incrementalupdates/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/ly/chen/incrementalupdates/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
